[-] Fix header z-index

--- a/source/stylesheets/_header.scss
+++ b/source/stylesheets/_header.scss
@@ -10,6 +10,7 @@ header {
   right: 0;
   text-align: center;
   top: 0;
+  z-index: 1;
 
   a {
     align-items: center;
